# zhuqian

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  LICENSE  README.md  README_en.md  design.md  plan.md  test.txt  themes.json
docs/: FILE_STANDARD.md
docs/en/: FILE_STANDARD.md
docs/internal/: CLAUDE.md
docs/zh/: FILE_STANDARD.md
src/: main.rs  parser.rs
zq-core/: Cargo.toml
zq-core/lang/: en.json  zh.json
zq-core/src/: label.rs  lib.rs  template.rs
zq-desktop/: Cargo.toml  build.rs  build_errors.txt  build_errors_2.txt  build_log.txt
zq-desktop/src/: app.rs  editor.rs  exact_depth.txt  export.rs  fonts.rs  main.rs  main_backup_original.rs  match_check.txt  menus.rs  output_braces.txt  parser.rs  settings.rs  sidebar.rs  stack_dump.txt  theme_io.rs
zq-vscode/: .vscodeignore  LICENSE  README.md  README_zh.md  package-lock.json  package.json  tsconfig.json  zhuqian-0.1.0.vsix  zhuqian-0.1.1.vsix
zq-vscode/src/: extension.ts
