[package]
name = "zq-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = { version = "0.12", default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
