[package]
name = "zhuqian"
version = "0.1.1"
edition = "2024"

[dependencies]
zq-core = { path = "../zq-core" }
eframe = { version = "0.33.3", features = ["persistence"] }
image = "0.25.5"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ttf-parser = "0.25.1"
dirs = "5.0"
